Progress on footer

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             Learn more about how Apple Card applications are evaluated at support.apple.com/kb/HT209218. <br><br>
             Apple TV+ is $4.99/month after free trial. One subscription per Family Sharing group. Offer good for 3 months after eligible device activation. Plan automatically renews until cancelled. Restrictions and other terms apply. <br></p>
         <ul>
-            <li><a href=""></a>Shop and Learn</li>
+            <li><strong>Shop and Learn</strong></li>
             <li><a href=""></a>Store</li>
             <li><a href=""></a>Mac</li>
             <li><a href=""></a>iPad</li>
@@ -139,7 +139,7 @@
             <li><a href=""></a>Gift Cards</li>
         </ul>
         <ul>
-            <li><a href="">Services</a></li>
+            <li><strong>Services</strong></li>
             <li><a href=""></a>Apple Music</li>
             <li><a href=""></a>Apple TV+</li>
             <li><a href=""></a>Apple Fitness+</li>
@@ -159,7 +159,7 @@
             <li><a href=""></a>iCloud.com</li>
         </ul>
         <ul>
-            <li><a href=""></a>Apple Store</li>
+            <li><strong>Apple Store</strong></li>
             <li><a href=""></a>Find a Store</li>
             <li><a href=""></a>Genius Bar</li>
             <li><a href=""></a>Today at Apple</li>
@@ -172,9 +172,46 @@
             <li><a href=""></a>Shopping Help</li>
         </ul>
         <ul>
-            <li><a href=""></a>For Business</li>
+            <li><strong>For Business</strong></li>
             <li><a href=""></a>Apple and Business</li>
             <li><a href=""></a>Shop for Business</li>
+        </ul>
+        <ul>
+            <li><strong>For Education</strong></li>
+            <li><a href=""></a>Apple and Education</li>
+            <li><a href=""></a>Shop for K-12</li>
+            <li><a href=""></a>Shop for College</li>
+        </ul>
+        <ul>
+            <li><strong>For Healthcare</strong></li>
+            <li><a href=""></a>Apple in Healthcare</li>
+            <li><a href=""></a>Health on Apple Watch</li>
+            <li><a href=""></a>Health Records on iPhone</li>
+        </ul>
+        <ul>
+            <li><strong>For Government</strong></li>
+            <li><a href=""></a>Shop for Government</li>
+            <li><a href=""></a>Shop for Veterans and Military</li>
+        </ul>
+        <ul>
+            <li><strong>Apple Values</strong></li>
+            <li><a href=""></a>Accessibility</li>
+            <li><a href=""></a>Education</li>
+            <li><a href=""></a>Environment</li>
+            <li><a href=""></a>Inclusion and Diversity</li>
+            <li><a href=""></a>Privacy</li>
+            <li><a href=""></a>Racial Equity and Justice</li>
+            <li><a href=""></a>Supplier Responsibility</li>
+        </ul>
+        <ul>
+            <li><strong>About Apple</strong></li>
+            <li><a href=""></a>Newsroom</li>
+            <li><a href=""></a>Apple Leadership</li>
+            <li><a href=""></a>Career Opportunities</li>
+            <li><a href=""></a>Investors</li>
+            <li><a href=""></a>Ethics & Compliance</li>
+            <li><a href=""></a>Events</li>
+            <li><a href=""></a>Contact Apple</li>
         </ul>
 
     </footer>
